import { render } from '@testing-library/react';
import {
  ArrowUpDownIcon,
  PackageIcon,
  ListIcon,
  ListOrderedIcon,
  FilterIcon,
  PieChartIcon,
  ArrowLeftIcon,
  LandmarkIcon,
  LogOutIcon,
  DollarSignIcon,
  CalendarDaysIcon,
  FlagIcon,
  WalletCardsIcon,
  BikeIcon,
  ActivityIcon,
  AwardIcon,
  ChevronRightIcon,
  DumbbellIcon,
  FishIcon,
  GoalIcon,
  GripIcon,
  HeartIcon,
  MapPinIcon,
  TurtleIcon,
  ShoppingBasketIcon,
  ShareIcon,
  StarIcon,
  CheckIcon,
  LayoutDashboardIcon,
  MapIcon,
  MoreHorizontalIcon,
  SettingsIcon,
  UsersIcon,
  PlusIcon,
  WalletIcon,
  FlameIcon,
  MedalIcon,
  CalendarCheckIcon,
  CalendarIcon,
  ClockIcon,
  CreditCardIcon,
  CurrencyIcon,
  LocateIcon,
  TicketIcon,
  UserIcon,
  TrashIcon,
  MenuIcon,
  TwitterIcon,
  YoutubeIcon,
  ShoppingCartIcon,
  DownloadIcon,
  XIcon,
  CircleEllipsisIcon,
  MinusIcon,
  TableIcon,
  AtSignIcon,
  BellIcon,
  EyeOffIcon,
  CalendarClockIcon,
  LineChartIcon,
  MoveHorizontalIcon
} from '@/components/ui/IconComponents';

const icons = [
  { name: 'ArrowUpDownIcon', component: ArrowUpDownIcon },
  { name: 'PackageIcon', component: PackageIcon },
  { name: 'ListIcon', component: ListIcon },
  { name: 'ListOrderedIcon', component: ListOrderedIcon },
  { name: 'FilterIcon', component: FilterIcon },
  { name: 'PieChartIcon', component: PieChartIcon },
  { name: 'ArrowLeftIcon', component: ArrowLeftIcon },
  { name: 'LandmarkIcon', component: LandmarkIcon },
  { name: 'LogOutIcon', component: LogOutIcon },
  { name: 'DollarSignIcon', component: DollarSignIcon },
  { name: 'CalendarDaysIcon', component: CalendarDaysIcon },
  { name: 'FlagIcon', component: FlagIcon },
  { name: 'WalletCardsIcon', component: WalletCardsIcon },
  { name: 'BikeIcon', component: BikeIcon },
  { name: 'ActivityIcon', component: ActivityIcon },
  { name: 'AwardIcon', component: AwardIcon },
  { name: 'ChevronRightIcon', component: ChevronRightIcon },
  { name: 'DumbbellIcon', component: DumbbellIcon },
  { name: 'FishIcon', component: FishIcon },
  { name: 'GoalIcon', component: GoalIcon },
  { name: 'GripIcon', component: GripIcon },
  { name: 'HeartIcon', component: HeartIcon },
  { name: 'MapPinIcon', component: MapPinIcon },
  { name: 'TurtleIcon', component: TurtleIcon },
  { name: 'ShoppingBasketIcon', component: ShoppingBasketIcon },
  { name: 'ShareIcon', component: ShareIcon },
  { name: 'StarIcon', component: StarIcon },
  { name: 'CheckIcon', component: CheckIcon },
  { name: 'LayoutDashboardIcon', component: LayoutDashboardIcon },
  { name: 'MapIcon', component: MapIcon },
  { name: 'MoreHorizontalIcon', component: MoreHorizontalIcon },
  { name: 'SettingsIcon', component: SettingsIcon },
  { name: 'UsersIcon', component: UsersIcon },
  { name: 'PlusIcon', component: PlusIcon },
  { name: 'WalletIcon', component: WalletIcon },
  { name: 'FlameIcon', component: FlameIcon },
  { name: 'MedalIcon', component: MedalIcon },
  { name: 'CalendarCheckIcon', component: CalendarCheckIcon },
  { name: 'CalendarIcon', component: CalendarIcon },
  { name: 'ClockIcon', component: ClockIcon },
  { name: 'CreditCardIcon', component: CreditCardIcon },
  { name: 'CurrencyIcon', component: CurrencyIcon },
  { name: 'LocateIcon', component: LocateIcon },
  { name: 'TicketIcon', component: TicketIcon },
  { name: 'UserIcon', component: UserIcon },
  { name: 'TrashIcon', component: TrashIcon },
  { name: 'MenuIcon', component: MenuIcon },
  { name: 'TwitterIcon', component: TwitterIcon },
  { name: 'YoutubeIcon', component: YoutubeIcon },
  { name: 'ShoppingCartIcon', component: ShoppingCartIcon },
  { name: 'DownloadIcon', component: DownloadIcon },
  { name: 'XIcon', component: XIcon },
  { name: 'CircleEllipsisIcon', component: CircleEllipsisIcon },
  { name: 'MinusIcon', component: MinusIcon },
  { name: 'TableIcon', component: TableIcon },
  { name: 'AtSignIcon', component: AtSignIcon },
  { name: 'BellIcon', component: BellIcon },
  { name: 'EyeOffIcon', component: EyeOffIcon },
  { name: 'CalendarClockIcon', component: CalendarClockIcon },
  { name: 'LineChartIcon', component: LineChartIcon },
  { name: 'MoveHorizontalIcon', component: MoveHorizontalIcon }
];

describe('Icon components', () => {
  icons.forEach(({ name, component: IconComponent }) => {
    it(`renders ${name} correctly`, () => {
      const { container } = render(<IconComponent />);
      expect(container.querySelector('svg')).toBeInTheDocument();
      expect(container).toMatchSnapshot();
    });
  });
});
