// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon components > renders ActivityIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
    />
  </svg>
</div>
`;

exports[`Icon components > renders ArrowLeftIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m12 19-7-7 7-7"
    />
    <path
      d="M19 12H5"
    />
  </svg>
</div>
`;

exports[`Icon components > renders ArrowUpDownIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21 16-4 4-4-4"
    />
    <path
      d="M17 20V4"
    />
    <path
      d="m3 8 4-4 4 4"
    />
    <path
      d="M7 4v16"
    />
  </svg>
</div>
`;

exports[`Icon components > renders AtSignIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="4"
    />
    <path
      d="M16 8v5a3 3 0 0 0 6 0v-1a10 10 0 1 0-4 8"
    />
  </svg>
</div>
`;

exports[`Icon components > renders AwardIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="8"
      r="6"
    />
    <path
      d="M15.477 12.89 17 22l-5-3-5 3 1.523-9.11"
    />
  </svg>
</div>
`;

exports[`Icon components > renders BellIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 8a6 6 0 0 1 12 0c0 7 3 9 3 9H3s3-2 3-9"
    />
    <path
      d="M10.3 21a1.94 1.94 0 0 0 3.4 0"
    />
  </svg>
</div>
`;

exports[`Icon components > renders BikeIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="18.5"
      cy="17.5"
      r="3.5"
    />
    <circle
      cx="5.5"
      cy="17.5"
      r="3.5"
    />
    <circle
      cx="15"
      cy="5"
      r="1"
    />
    <path
      d="M12 17.5V14l-3-3 4-3 2 3h2"
    />
  </svg>
</div>
`;

exports[`Icon components > renders CalendarCheckIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="18"
      rx="2"
      ry="2"
      width="18"
      x="3"
      y="4"
    />
    <line
      x1="16"
      x2="16"
      y1="2"
      y2="6"
    />
    <line
      x1="8"
      x2="8"
      y1="2"
      y2="6"
    />
    <line
      x1="3"
      x2="21"
      y1="10"
      y2="10"
    />
    <path
      d="m9 16 2 2 4-4"
    />
  </svg>
</div>
`;

exports[`Icon components > renders CalendarClockIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 7.5V6a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h3.5"
    />
    <path
      d="M16 2v4"
    />
    <path
      d="M8 2v4"
    />
    <path
      d="M3 10h5"
    />
    <path
      d="M17.5 17.5 16 16.3V14"
    />
    <circle
      cx="16"
      cy="16"
      r="6"
    />
  </svg>
</div>
`;

exports[`Icon components > renders CalendarDaysIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 2v4"
    />
    <path
      d="M16 2v4"
    />
    <rect
      height="18"
      rx="2"
      width="18"
      x="3"
      y="4"
    />
    <path
      d="M3 10h18"
    />
    <path
      d="M8 14h.01"
    />
    <path
      d="M12 14h.01"
    />
    <path
      d="M16 14h.01"
    />
    <path
      d="M8 18h.01"
    />
    <path
      d="M12 18h.01"
    />
    <path
      d="M16 18h.01"
    />
  </svg>
</div>
`;

exports[`Icon components > renders CalendarIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="18"
      rx="2"
      ry="2"
      width="18"
      x="3"
      y="4"
    />
    <line
      x1="16"
      x2="16"
      y1="2"
      y2="6"
    />
    <line
      x1="8"
      x2="8"
      y1="2"
      y2="6"
    />
    <line
      x1="3"
      x2="21"
      y1="10"
      y2="10"
    />
  </svg>
</div>
`;

exports[`Icon components > renders CheckIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polyline
      points="20 6 9 17 4 12"
    />
  </svg>
</div>
`;

exports[`Icon components > renders ChevronRightIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m9 18 6-6-6-6"
    />
  </svg>
</div>
`;

exports[`Icon components > renders CircleEllipsisIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="M17 12h.01"
    />
    <path
      d="M12 12h.01"
    />
    <path
      d="M7 12h.01"
    />
  </svg>
</div>
`;

exports[`Icon components > renders ClockIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <polyline
      points="12 6 12 12 16 14"
    />
  </svg>
</div>
`;

exports[`Icon components > renders CreditCardIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="14"
      rx="2"
      width="20"
      x="2"
      y="5"
    />
    <line
      x1="2"
      x2="22"
      y1="10"
      y2="10"
    />
  </svg>
</div>
`;

exports[`Icon components > renders CurrencyIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="8"
    />
    <line
      x1="3"
      x2="6"
      y1="3"
      y2="6"
    />
    <line
      x1="21"
      x2="18"
      y1="3"
      y2="6"
    />
    <line
      x1="3"
      x2="6"
      y1="21"
      y2="18"
    />
    <line
      x1="21"
      x2="18"
      y1="21"
      y2="18"
    />
  </svg>
</div>
`;

exports[`Icon components > renders DollarSignIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      x1="12"
      x2="12"
      y1="2"
      y2="22"
    />
    <path
      d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
    />
  </svg>
</div>
`;

exports[`Icon components > renders DownloadIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
    />
    <polyline
      points="7 10 12 15 17 10"
    />
    <line
      x1="12"
      x2="12"
      y1="15"
      y2="3"
    />
  </svg>
</div>
`;

exports[`Icon components > renders DumbbellIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M14.4 14.4 9.6 9.6"
    />
    <path
      d="M18.657 21.485a2 2 0 1 1-2.829-2.828l-1.767 1.768a2 2 0 1 1-2.829-2.829l6.364-6.364a2 2 0 1 1 2.829 2.829l-1.768 1.767a2 2 0 1 1 2.828 2.829z"
    />
    <path
      d="m21.5 21.5-1.4-1.4"
    />
    <path
      d="M3.9 3.9 2.5 2.5"
    />
    <path
      d="M6.404 12.768a2 2 0 1 1-2.829-2.829l1.768-1.767a2 2 0 1 1-2.828-2.829l2.828-2.828a2 2 0 1 1 2.829 2.828l1.767-1.768a2 2 0 1 1 2.829 2.829z"
    />
  </svg>
</div>
`;

exports[`Icon components > renders EyeOffIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.88 9.88a3 3 0 1 0 4.24 4.24"
    />
    <path
      d="M10.73 5.08A10.43 10.43 0 0 1 12 5c7 0 10 7 10 7a13.16 13.16 0 0 1-1.67 2.68"
    />
    <path
      d="M6.61 6.61A13.526 13.526 0 0 0 2 12s3 7 10 7a9.74 9.74 0 0 0 5.39-1.61"
    />
    <line
      x1="2"
      x2="22"
      y1="2"
      y2="22"
    />
  </svg>
</div>
`;

exports[`Icon components > renders FilterIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polygon
      points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3"
    />
  </svg>
</div>
`;

exports[`Icon components > renders FishIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6.5 12c.94-3.46 4.94-6 8.5-6 3.56 0 6.06 2.54 7 6-.94 3.47-3.44 6-7 6s-7.56-2.53-8.5-6Z"
    />
    <path
      d="M18 12v.5"
    />
    <path
      d="M16 17.93a9.77 9.77 0 0 1 0-11.86"
    />
    <path
      d="M7 10.67C7 8 5.58 5.97 2.73 5.5c-1 1.5-1 5 .23 6.5-1.24 1.5-1.24 5-.23 6.5C5.58 18.03 7 16 7 13.33"
    />
    <path
      d="M10.46 7.26C10.2 5.88 9.17 4.24 8 3h5.8a2 2 0 0 1 1.98 1.67l.23 1.4"
    />
    <path
      d="m16.01 17.93-.23 1.4A2 2 0 0 1 13.8 21H9.5a5.96 5.96 0 0 0 1.49-3.98"
    />
  </svg>
</div>
`;

exports[`Icon components > renders FlagIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"
    />
    <line
      x1="4"
      x2="4"
      y1="22"
      y2="15"
    />
  </svg>
</div>
`;

exports[`Icon components > renders FlameIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
    />
  </svg>
</div>
`;

exports[`Icon components > renders GoalIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 13V2l8 4-8 4"
    />
    <path
      d="M20.561 10.222a9 9 0 1 1-12.55-5.29"
    />
    <path
      d="M8.002 9.997a5 5 0 1 0 8.9 2.02"
    />
  </svg>
</div>
`;

exports[`Icon components > renders GripIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="5"
      r="1"
    />
    <circle
      cx="19"
      cy="5"
      r="1"
    />
    <circle
      cx="5"
      cy="5"
      r="1"
    />
    <circle
      cx="12"
      cy="12"
      r="1"
    />
    <circle
      cx="19"
      cy="12"
      r="1"
    />
    <circle
      cx="5"
      cy="12"
      r="1"
    />
    <circle
      cx="12"
      cy="19"
      r="1"
    />
    <circle
      cx="19"
      cy="19"
      r="1"
    />
    <circle
      cx="5"
      cy="19"
      r="1"
    />
  </svg>
</div>
`;

exports[`Icon components > renders HeartIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
    />
  </svg>
</div>
`;

exports[`Icon components > renders LandmarkIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      x1="3"
      x2="21"
      y1="22"
      y2="22"
    />
    <line
      x1="6"
      x2="6"
      y1="18"
      y2="11"
    />
    <line
      x1="10"
      x2="10"
      y1="18"
      y2="11"
    />
    <line
      x1="14"
      x2="14"
      y1="18"
      y2="11"
    />
    <line
      x1="18"
      x2="18"
      y1="18"
      y2="11"
    />
    <polygon
      points="12 2 20 7 4 7"
    />
  </svg>
</div>
`;

exports[`Icon components > renders LayoutDashboardIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="9"
      rx="1"
      width="7"
      x="3"
      y="3"
    />
    <rect
      height="5"
      rx="1"
      width="7"
      x="14"
      y="3"
    />
    <rect
      height="9"
      rx="1"
      width="7"
      x="14"
      y="12"
    />
    <rect
      height="5"
      rx="1"
      width="7"
      x="3"
      y="16"
    />
  </svg>
</div>
`;

exports[`Icon components > renders LineChartIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 3v18h18"
    />
    <path
      d="m19 9-5 5-4-4-3 3"
    />
  </svg>
</div>
`;

exports[`Icon components > renders ListIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      x1="8"
      x2="21"
      y1="6"
      y2="6"
    />
    <line
      x1="8"
      x2="21"
      y1="12"
      y2="12"
    />
    <line
      x1="8"
      x2="21"
      y1="18"
      y2="18"
    />
    <line
      x1="3"
      x2="3.01"
      y1="6"
      y2="6"
    />
    <line
      x1="3"
      x2="3.01"
      y1="12"
      y2="12"
    />
    <line
      x1="3"
      x2="3.01"
      y1="18"
      y2="18"
    />
  </svg>
</div>
`;

exports[`Icon components > renders ListOrderedIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      x1="10"
      x2="21"
      y1="6"
      y2="6"
    />
    <line
      x1="10"
      x2="21"
      y1="12"
      y2="12"
    />
    <line
      x1="10"
      x2="21"
      y1="18"
      y2="18"
    />
    <path
      d="M4 6h1v4"
    />
    <path
      d="M4 10h2"
    />
    <path
      d="M6 18H4c0-1 2-2 2-3s-1-1.5-2-1"
    />
  </svg>
</div>
`;

exports[`Icon components > renders LocateIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      x1="2"
      x2="5"
      y1="12"
      y2="12"
    />
    <line
      x1="19"
      x2="22"
      y1="12"
      y2="12"
    />
    <line
      x1="12"
      x2="12"
      y1="2"
      y2="5"
    />
    <line
      x1="12"
      x2="12"
      y1="19"
      y2="22"
    />
    <circle
      cx="12"
      cy="12"
      r="7"
    />
  </svg>
</div>
`;

exports[`Icon components > renders LogOutIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
    />
    <polyline
      points="16 17 21 12 16 7"
    />
    <line
      x1="21"
      x2="9"
      y1="12"
      y2="12"
    />
  </svg>
</div>
`;

exports[`Icon components > renders MapIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polygon
      points="3 6 9 3 15 6 21 3 21 18 15 21 9 18 3 21"
    />
    <line
      x1="9"
      x2="9"
      y1="3"
      y2="18"
    />
    <line
      x1="15"
      x2="15"
      y1="6"
      y2="21"
    />
  </svg>
</div>
`;

exports[`Icon components > renders MapPinIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"
    />
    <circle
      cx="12"
      cy="10"
      r="3"
    />
  </svg>
</div>
`;

exports[`Icon components > renders MedalIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.21 15 2.66 7.14a2 2 0 0 1 .13-2.2L4.4 2.8A2 2 0 0 1 6 2h12a2 2 0 0 1 1.6.8l1.6 2.14a2 2 0 0 1 .14 2.2L16.79 15"
    />
    <path
      d="M11 12 5.12 2.2"
    />
    <path
      d="m13 12 5.88-9.8"
    />
    <path
      d="M8 7h8"
    />
    <circle
      cx="12"
      cy="17"
      r="5"
    />
    <path
      d="M12 18v-2h-.5"
    />
  </svg>
</div>
`;

exports[`Icon components > renders MenuIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      x1="4"
      x2="20"
      y1="12"
      y2="12"
    />
    <line
      x1="4"
      x2="20"
      y1="6"
      y2="6"
    />
    <line
      x1="4"
      x2="20"
      y1="18"
      y2="18"
    />
  </svg>
</div>
`;

exports[`Icon components > renders MinusIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 12h14"
    />
  </svg>
</div>
`;

exports[`Icon components > renders MoreHorizontalIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="1"
    />
    <circle
      cx="19"
      cy="12"
      r="1"
    />
    <circle
      cx="5"
      cy="12"
      r="1"
    />
  </svg>
</div>
`;

exports[`Icon components > renders MoveHorizontalIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polyline
      points="18 8 22 12 18 16"
    />
    <polyline
      points="6 8 2 12 6 16"
    />
    <line
      x1="2"
      x2="22"
      y1="12"
      y2="12"
    />
  </svg>
</div>
`;

exports[`Icon components > renders PackageIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m7.5 4.27 9 5.15"
    />
    <path
      d="M21 8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16Z"
    />
    <path
      d="m3.3 7 8.7 5 8.7-5"
    />
    <path
      d="M12 22V12"
    />
  </svg>
</div>
`;

exports[`Icon components > renders PieChartIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21.21 15.89A10 10 0 1 1 8 2.83"
    />
    <path
      d="M22 12A10 10 0 0 0 12 2v10z"
    />
  </svg>
</div>
`;

exports[`Icon components > renders PlusIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 12h14"
    />
    <path
      d="M12 5v14"
    />
  </svg>
</div>
`;

exports[`Icon components > renders SettingsIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
    />
    <circle
      cx="12"
      cy="12"
      r="3"
    />
  </svg>
</div>
`;

exports[`Icon components > renders ShareIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"
    />
    <polyline
      points="16 6 12 2 8 6"
    />
    <line
      x1="12"
      x2="12"
      y1="2"
      y2="15"
    />
  </svg>
</div>
`;

exports[`Icon components > renders ShoppingBasketIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m15 11-1 9"
    />
    <path
      d="m19 11-4-7"
    />
    <path
      d="M2 11h20"
    />
    <path
      d="m3.5 11 1.6 7.4a2 2 0 0 0 2 1.6h9.8a2 2 0 0 0 2-1.6l1.7-7.4"
    />
    <path
      d="M4.5 15.5h15"
    />
    <path
      d="m5 11 4-7"
    />
    <path
      d="m9 11 1 9"
    />
  </svg>
</div>
`;

exports[`Icon components > renders ShoppingCartIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="8"
      cy="21"
      r="1"
    />
    <circle
      cx="19"
      cy="21"
      r="1"
    />
    <path
      d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
    />
  </svg>
</div>
`;

exports[`Icon components > renders StarIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <polygon
      points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"
    />
  </svg>
</div>
`;

exports[`Icon components > renders TableIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 3v18"
    />
    <rect
      height="18"
      rx="2"
      width="18"
      x="3"
      y="3"
    />
    <path
      d="M3 9h18"
    />
    <path
      d="M3 15h18"
    />
  </svg>
</div>
`;

exports[`Icon components > renders TicketIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 9a3 3 0 0 1 0 6v2a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-2a3 3 0 0 1 0-6V7a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2Z"
    />
    <path
      d="M13 5v2"
    />
    <path
      d="M13 17v2"
    />
    <path
      d="M13 11v2"
    />
  </svg>
</div>
`;

exports[`Icon components > renders TrashIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 6h18"
    />
    <path
      d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
    />
    <path
      d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
    />
  </svg>
</div>
`;

exports[`Icon components > renders TurtleIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m12 10 2 4v3a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-3a8 8 0 1 0-16 0v3a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-3l2-4h4Z"
    />
    <path
      d="M4.82 7.9 8 10"
    />
    <path
      d="M15.18 7.9 12 10"
    />
    <path
      d="M16.93 10H20a2 2 0 0 1 0 4H2"
    />
  </svg>
</div>
`;

exports[`Icon components > renders TwitterIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z"
    />
  </svg>
</div>
`;

exports[`Icon components > renders UserIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
    />
    <circle
      cx="12"
      cy="7"
      r="4"
    />
  </svg>
</div>
`;

exports[`Icon components > renders UsersIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
    />
    <circle
      cx="9"
      cy="7"
      r="4"
    />
    <path
      d="M22 21v-2a4 4 0 0 0-3-3.87"
    />
    <path
      d="M16 3.13a4 4 0 0 1 0 7.75"
    />
  </svg>
</div>
`;

exports[`Icon components > renders WalletCardsIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="18"
      rx="2"
      width="18"
      x="3"
      y="3"
    />
    <path
      d="M3 9a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2"
    />
    <path
      d="M3 11h3c.8 0 1.6.3 2.1.9l1.1.9c1.6 1.6 4.1 1.6 5.7 0l1.1-.9c.5-.5 1.3-.9 2.1-.9H21"
    />
  </svg>
</div>
`;

exports[`Icon components > renders WalletIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12V7H5a2 2 0 0 1 0-4h14v4"
    />
    <path
      d="M3 5v14a2 2 0 0 0 2 2h16v-5"
    />
    <path
      d="M18 12a2 2 0 0 0 0 4h4v-4Z"
    />
  </svg>
</div>
`;

exports[`Icon components > renders XIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 6 6 18"
    />
    <path
      d="m6 6 12 12"
    />
  </svg>
</div>
`;

exports[`Icon components > renders YoutubeIcon correctly 1`] = `
<div>
  <svg
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2.5 17a24.12 24.12 0 0 1 0-10 2 2 0 0 1 1.4-1.4 49.56 49.56 0 0 1 16.2 0A2 2 0 0 1 21.5 7a24.12 24.12 0 0 1 0 10 2 2 0 0 1-1.4 1.4 49.55 49.55 0 0 1-16.2 0A2 2 0 0 1 2.5 17"
    />
    <path
      d="m10 15 5-3-5-3z"
    />
  </svg>
</div>
`;
